# pastify

./: .eslintrc.cjs  .firebaserc  .gitignore  .prettierignore  .prettierrc  Cargo.toml  Procfile  README.md  firebase.json  firestore.rules  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.js  svelte.config.js  tailwind.config.js  tsconfig.json
.circleci/: config.yml
.github/workflows/: build-deploy.yml  cypress-tests.yml  fe-tests.yml  ghpages-deploy.yml
api/: .gitignore  package-lock.json  package.json  tsconfig.json
api/public/prism/: prism.css
api/src/: index.ts
cli/: .gitignore  README.md  setup.py
cli/pastify/: __main__.py
frontend/: package-lock.json  package.json  rollup.config.js
frontend/public/: globals.css  index.html
frontend/src/: App.svelte
functions/: package-lock.json  package.json
functions/src/: index.ts
public/: globals.css
src/: App.vue  api.rs  app.d.ts  app.html  cli.rs  firebaseConfig.ts  firestore.rs  main.ts
src/api/: errors.rs  routes.rs
src/components/: EditPaste.svelte  Navbar.svelte  Navbar.vue
src/lib/: Monaco.svelte  TopBar.svelte  monaco.ts
src/models/: Paste.ts
src/router/: index.ts
src/routes/: +layout.svelte  +page.svelte  +server.ts
src/services/: PastesService.ts
src/views/: About.vue  Home.vue  ShowPaste.vue
templates/: base.html.tera  index.html.tera  show.html.tera
web/: README.md  package-lock.json  package.json  rollup.config.js
web/intellij-plugin/: build.gradle.kts  settings.gradle.kts
web/public/: index.html
web/src/: App.svelte  App.vue  firebaseConfig.ts
(+21 files in other folders)
